--- a/app/design/adminhtml/default/default/template/page/head.phtml
+++ b/app/design/adminhtml/default/default/template/page/head.phtml
@@ -27,10 +27,12 @@
 <?= $this->getCssJsHtml() ?>
 
 <?php if ($this->getData('can_load_wysiwyg')): ?>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css">
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/quill-resize-module@2.0.4/dist/resize.min.css">
-<script src="https://cdn.jsdelivr.net/npm/quill-resize-module@2.0.4/dist/resize.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/quill-resize-module@2.0.4/dist/resize.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/quill-resize-module@2.0.4/dist/resize.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/quill-table-better@1.1.6/dist/quill-table-better.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/quill-table-better@1.1.6/dist/quill-table-better.min.js"></script>
 <?php endif ?>
 
 <script type="text/javascript">
