--- a/app/design/adminhtml/default/default/template/newsletter/template/edit.phtml
+++ b/app/design/adminhtml/default/default/template/newsletter/template/edit.phtml
@@ -221,11 +221,11 @@ const templateControl = {
     },
 
     isEditor() {
-        return window.quillEditors?.has?.(this.id);
+        return window.tiptapEditors?.has?.(this.id);
     },
 
     getEditor() {
-        return window.quillEditors?.get(this.id);
+        return window.tiptapEditors?.get(this.id);
     }
 };
 
