--- a/app/design/adminhtml/default/default/template/page/head.phtml
+++ b/app/design/adminhtml/default/default/template/page/head.phtml
@@ -27,10 +27,40 @@
 <?= $this->getCssJsHtml() ?>
 
 <?php if ($this->getData('can_load_wysiwyg')): ?>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css">
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/quill-resize-module@2.0.4/dist/resize.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/quill-resize-module@2.0.4/dist/resize.min.js"></script>
+    <!-- Tiptap Editor - Using a different approach with bundled version -->
+    <script type="module">
+        // Import Tiptap modules and make them available globally
+        import { Editor, Node, Mark, mergeAttributes } from 'https://esm.sh/@tiptap/core@2.10.4';
+        import StarterKit from 'https://esm.sh/@tiptap/starter-kit@2.10.4';
+        import Link from 'https://esm.sh/@tiptap/extension-link@2.10.4';
+        import Image from 'https://esm.sh/@tiptap/extension-image@2.10.4';
+        import TextAlign from 'https://esm.sh/@tiptap/extension-text-align@2.10.4';
+        import Underline from 'https://esm.sh/@tiptap/extension-underline@2.10.4';
+        import Table from 'https://esm.sh/@tiptap/extension-table@2.10.4';
+        import TableRow from 'https://esm.sh/@tiptap/extension-table-row@2.10.4';
+        import TableCell from 'https://esm.sh/@tiptap/extension-table-cell@2.10.4';
+        import TableHeader from 'https://esm.sh/@tiptap/extension-table-header@2.10.4';
+        
+        // Make them available globally for our setup script
+        window.TiptapModules = {
+            Editor,
+            Node,
+            Mark,
+            mergeAttributes,
+            StarterKit,
+            Link,
+            Image,
+            TextAlign,
+            Underline,
+            Table,
+            TableRow,
+            TableCell,
+            TableHeader
+        };
+        
+        // Dispatch event when modules are loaded
+        window.dispatchEvent(new Event('tiptap-modules-loaded'));
+    </script>
 <?php endif ?>
 
 <script type="text/javascript">
