--- a/app/design/adminhtml/default/default/template/page/head.phtml
+++ b/app/design/adminhtml/default/default/template/page/head.phtml
@@ -27,9 +27,7 @@
 <?= $this->getCssJsHtml() ?>
 
 <?php if ($this->getData('can_load_wysiwyg')): ?>
-    <!-- Tiptap Editor - Using a different approach with bundled version -->
     <script type="module">
-        // Import Tiptap modules and make them available globally
         import { Editor, Node, Mark, mergeAttributes } from 'https://esm.sh/@tiptap/core@2.12.0';
         import StarterKit from 'https://esm.sh/@tiptap/starter-kit@2.12.0';
         import Link from 'https://esm.sh/@tiptap/extension-link@2.12.0';
@@ -40,25 +38,13 @@
         import TableRow from 'https://esm.sh/@tiptap/extension-table-row@2.12.0';
         import TableCell from 'https://esm.sh/@tiptap/extension-table-cell@2.12.0';
         import TableHeader from 'https://esm.sh/@tiptap/extension-table-header@2.12.0';
-        
-        // Make them available globally for our setup script
+        import BubbleMenu from 'https://esm.sh/@tiptap/extension-bubble-menu@2.12.0';
+
         window.TiptapModules = {
-            Editor,
-            Node,
-            Mark,
-            mergeAttributes,
-            StarterKit,
-            Link,
-            Image,
-            TextAlign,
-            Underline,
-            Table,
-            TableRow,
-            TableCell,
-            TableHeader
+            Editor, Node, Mark, mergeAttributes, StarterKit,
+            Link, Image, TextAlign, Underline,
+            Table, TableRow, TableCell, TableHeader, BubbleMenu
         };
-        
-        // Dispatch event when modules are loaded
         window.dispatchEvent(new Event('tiptap-modules-loaded'));
     </script>
 <?php endif ?>
