--- a/app/design/adminhtml/default/default/layout/paymentrestriction.xml
+++ b/app/design/adminhtml/default/default/layout/paymentrestriction.xml
@@ -16,26 +16,22 @@
     </adminhtml_paymentrestriction_index>
 
     <adminhtml_paymentrestriction_new>
+        <reference name="head">
+            <action method="setCanLoadRulesJs"><flag>1</flag></action>
+            <action method="addJs"><name>maho-tree.js</name></action>
+        </reference>
         <reference name="content">
             <block type="adminhtml/paymentrestriction_edit" name="payment_restriction_edit"></block>
-        </reference>
-        <reference name="left">
-            <block type="adminhtml/paymentrestriction_edit_tabs" name="payment_restriction_edit_tabs">
-                <block type="adminhtml/paymentrestriction_edit_tab_main" name="payment_restriction_edit_tab_main"/>
-                <action method="addTab"><name>main_section</name><block>payment_restriction_edit_tab_main</block></action>
-            </block>
         </reference>
     </adminhtml_paymentrestriction_new>
 
     <adminhtml_paymentrestriction_edit>
+        <reference name="head">
+            <action method="setCanLoadRulesJs"><flag>1</flag></action>
+            <action method="addJs"><name>maho-tree.js</name></action>
+        </reference>
         <reference name="content">
             <block type="adminhtml/paymentrestriction_edit" name="payment_restriction_edit"></block>
-        </reference>
-        <reference name="left">
-            <block type="adminhtml/paymentrestriction_edit_tabs" name="payment_restriction_edit_tabs">
-                <block type="adminhtml/paymentrestriction_edit_tab_main" name="payment_restriction_edit_tab_main"/>
-                <action method="addTab"><name>main_section</name><block>payment_restriction_edit_tab_main</block></action>
-            </block>
         </reference>
     </adminhtml_paymentrestriction_edit>
 </layout>
