--- a/app/design/frontend/base/default/template/page/3columns.phtml
+++ b/app/design/frontend/base/default/template/page/3columns.phtml
@@ -26,6 +26,7 @@
         <div class="main-container col3-layout">
             <div class="main">
                 <?= $this->getChildHtml('breadcrumbs') ?>
+                <?= $this->getChildHtml('category.title') ?>
                 <div class="col-wrapper">
                     <?php // This left_first block will display above the main content on smaller viewports ?>
                     <?php if ($_leftContent = $this->getChildHtml('left_first')): ?>
