generic page title

--- a/app/design/frontend/base/default/layout/catalog.xml
+++ b/app/design/frontend/base/default/layout/catalog.xml
@@ -44,8 +44,7 @@ Category default layout
         <!-- Set 2 columns with left sidebar as default layout -->
         <reference name="root">
             <action method="setTemplate"><template>page/2columns-left.phtml</template></action>
-            <!-- Add category title after breadcrumbs -->
-            <block type="catalog/category_view" name="category.title" after="breadcrumbs" template="catalog/category/title.phtml"/>
+            <block type="catalog/category_title" name="category.title" after="breadcrumbs" template="catalog/category/title.phtml"/>
         </reference>
         <reference name="left_first">
             <block type="catalog/navigation" name="catalog.leftnav" after="currency" template="catalog/navigation/left.phtml">
@@ -92,8 +91,7 @@ Category layered navigation layout
         <!-- Set 2 columns with left sidebar as default layout -->
         <reference name="root">
             <action method="setTemplate"><template>page/2columns-left.phtml</template></action>
-            <!-- Add category title after breadcrumbs -->
-            <block type="catalog/category_view" name="category.title" after="breadcrumbs" template="catalog/category/title.phtml"/>
+            <block type="catalog/category_title" name="category.title" after="breadcrumbs" template="catalog/category/title.phtml"/>
         </reference>
         <reference name="left_first">
             <block type="catalog/layer_view" name="catalog.leftnav" after="currency" template="catalog/layer/view.phtml">
