--- a/app/design/frontend/base/default/template/page/1column.phtml
+++ b/app/design/frontend/base/default/template/page/1column.phtml
@@ -26,7 +26,7 @@
         <main class="main-container col1-layout" role="main">
             <div class="main">
                 <?= $this->getChildHtml('breadcrumbs') ?>
-                <?= $this->getChildHtml('category.title') ?>
+                <?= $this->getChildHtml('title') ?>
                 <div class="col-main" id="main-content">
                     <?= $this->getChildHtml('global_messages') ?>
                     <?= $this->getChildHtml('content') ?>
@@ -42,4 +42,3 @@
 <?= $this->getAbsoluteFooter() ?>
 </body>
 </html>
-
