--- a/app/design/frontend/base/default/template/page/2columns-right.phtml
+++ b/app/design/frontend/base/default/template/page/2columns-right.phtml
@@ -26,7 +26,7 @@
         <div class="main-container col2-right-layout">
             <div class="main">
                 <?= $this->getChildHtml('breadcrumbs') ?>
-                <?= $this->getChildHtml('category.title') ?>
+                <?= $this->getChildHtml('title') ?>
                 <main class="col-main" id="main-content" role="main">
                     <?= $this->getChildHtml('global_messages') ?>
                     <?= $this->getChildHtml('content') ?>
