--- a/app/design/frontend/base/default/layout/catalog.xml
+++ b/app/design/frontend/base/default/layout/catalog.xml
@@ -42,7 +42,7 @@ Category default layout
     <catalog_category_default translate="label">
         <label>Catalog Category (Non-Anchor)</label>
         <reference name="root">
-            <block type="catalog/category_title" name="category.title" after="breadcrumbs" template="catalog/category/title.phtml"/>
+            <block type="catalog/category_title" name="title" as="title" template="catalog/category/title.phtml"/>
         </reference>
         <reference name="left_first">
             <block type="catalog/navigation" name="catalog.leftnav" after="currency" template="catalog/navigation/left.phtml">
@@ -87,7 +87,7 @@ Category layered navigation layout
     <catalog_category_layered translate="label">
         <label>Catalog Category (Anchor)</label>
         <reference name="root">
-            <block type="catalog/category_title" name="category.title" after="breadcrumbs" template="catalog/category/title.phtml"/>
+            <block type="catalog/category_title" name="title" as="title" template="catalog/category/title.phtml"/>
         </reference>
         <reference name="left_first">
             <block type="catalog/layer_view" name="catalog.leftnav" after="currency" template="catalog/layer/view.phtml">
