--- a/app/design/adminhtml/default/default/template/promo/salesrulejs.phtml
+++ b/app/design/adminhtml/default/default/template/promo/salesrulejs.phtml
@@ -5,104 +5,94 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2022 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<script type="text/javascript">
-//<![CDATA[
-var couponTypeSpecific = '<?= Mage_SalesRule_Model_Rule::COUPON_TYPE_SPECIFIC ?>';
-var tmpButtonsActionsStorage = [];
+<script>
+const couponTypeSpecific = '<?= Mage_SalesRule_Model_Rule::COUPON_TYPE_SPECIFIC ?>';
 
 function disableEnableCouponsTabContent(disable) {
-    var containerId = 'promo_catalog_edit_tabs_coupons_section_content';
-    if($(containerId)){
-        var dataFields = $(containerId).select('input', 'select', 'textarea', 'button');
-        for(var i = 0; i < dataFields.length; i++) {
-            disable ? dataFields[i].disable().addClassName('disabled')
-                : dataFields[i].enable().removeClassName('disabled');
-        }
+    const containerEl = document.getElementById('promo_catalog_edit_tabs_coupons_section_content');
+    if (!containerEl) {
+        return;
     }
-    disable ? $('rule_coupon_code').enable() : $('rule_coupon_code').disable();
+    for (const el of containerEl.querySelectorAll('input, select, textarea, button')) {
+        setElementDisable(el, disable);
+    }
 }
 
 function handleCouponsTabContentActivity() {
-    disableEnableCouponsTabContent(!$('rule_use_auto_generation').checked);
-}
-
-function handleCouponTypeChange() {
-    $('rule_coupon_type').observe('change', function() {
-        var disable = $('rule_coupon_type').value != couponTypeSpecific;
-        if (!disable) {
-            disable = !$('rule_use_auto_generation').checked;
+    const couponType = document.getElementById('rule_coupon_type').value;
+    if (couponType == couponTypeSpecific) {
+        if (document.getElementById('rule_use_auto_generation').checked) {
+            disableEnableCouponsTabContent(false);
+            setElementDisable(document.getElementById('rule_coupon_code'), true);
+        } else {
+            disableEnableCouponsTabContent(true);
+            setElementDisable(document.getElementById('rule_coupon_code'), false);
         }
-        disableEnableCouponsTabContent(disable);
-    });
+    } else {
+        disableEnableCouponsTabContent(true);
+    }
 }
 
-function refreshCouponCodesGrid(grid, gridMassAction, transport) {
+function refreshCouponCodesGrid(grid, gridMassAction) {
     grid.reload();
     gridMassAction.unselectAll();
 }
 
-function generateCouponCodes(idPrefix, generateUrl, grid) {
-    $(idPrefix + 'information_fieldset').removeClassName('ignore-validate');
-    var validationResult = $(idPrefix + 'information_fieldset').select('input',
-            'select', 'textarea').collect( function(elm) {
-        return Validation.validate(elm, {
-            useTitle :false,
-            onElementValidate : function() {
-            }
+async function generateCouponCodes(idPrefix, generateUrl, grid) {
+    const fieldsetEl = document.getElementById(idPrefix + 'information_fieldset');
+    const elements = fieldsetEl.querySelectorAll('input, select, textarea');
+    let validationResult = true;
+
+    fieldsetEl.classList.remove('ignore-validate');
+    for (const el of elements) {
+        validationResult &&= Validation.validate(el, {
+            useTitle: false,
+            onElementValidate: function() {},
         });
-    }).all();
-    $(idPrefix + 'information_fieldset').addClassName('ignore-validate');
+    }
+    fieldsetEl.classList.add('ignore-validate');
 
     if (!validationResult) {
         return;
     }
-    var elements = $(idPrefix + 'information_fieldset').select('input', 'select', 'textarea');
 
-    elements = elements.concat(
-        $$('#rule_uses_per_coupon'),
-        $$('#rule_uses_per_customer'),
-        $$('#rule_to_date')
-    );
+    const formData = new FormData();
+    for (const el of elements) {
+        formData.append(el.name, el.value);
+    }
+    for (const extra of ['rule_uses_per_coupon', 'rule_uses_per_customer', 'rule_to_date']) {
+        const el = document.getElementById(extra);
+        formData.append(el.name, el.value);
+    }
 
-    var params = Form.serializeElements(elements, true);
-    params.form_key = FORM_KEY;
-    $('messages').update();
-    var couponCodesGrid = eval(grid);
-    new Ajax.Request(generateUrl, {
-        parameters :params,
-        method :'post',
-        onComplete : function (transport, param){
-            var response = transport.responseJSON || transport.responseText.evalJSON(true) || {};
+    clearMessagesDiv();
 
-            if (couponCodesGrid) {
-                couponCodesGrid.reload();
-            }
-            if (response && response.messages) {
-                $('messages').update(response.messages);
-            }
-            if (response && response.error) {
-                alert(response.error.stripTags().toString());
-            }
+    try {
+        const result = await mahoFetch(generateUrl, {
+            method: 'POST',
+            body: formData,
+        });
+
+        if (window[grid]) {
+            window[grid].reload();
         }
-    });
+        if (result?.messages) {
+            setMessagesDivHtml(result.messages);
+        }
+    } catch (error) {
+        setMessagesDiv(error.message, 'error');
+    }
+
+    handleCouponsTabContentActivity();
 }
 
-Ajax.Responders.register({
-    onComplete: function() {
-        if ($('promo_catalog_edit_tabs_coupons_section_content')
-            && $('promo_catalog_edit_tabs_coupons_section_content').visible()
-            && Ajax.activeRequestCount == 0
-        ) {
-            handleCouponsTabContentActivity();
-        }
-    }
+document.addEventListener('DOMContentLoaded', () => {
+    handleCouponsTabContentActivity();
+    document.getElementById('rule_coupon_type')?.addEventListener('change', handleCouponsTabContentActivity);
+    document.getElementById('rule_use_auto_generation')?.addEventListener('change', handleCouponsTabContentActivity);
 });
-
-document.observe("dom:loaded", handleCouponsTabContentActivity);
-document.observe("dom:loaded", handleCouponTypeChange);
-//]]>
 </script>
